tests/invalid/bytearray_unknown_method/main.py
def run_case() -> None:
    ba: bytearray = bytearray(b"hi")

    ba.foo()

if __name__ == "__main__":
    run_case()
